WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22083
MessageEvents cannot be used across threads
https://bugs.webkit.org/show_bug.cgi?id=22083
Summary
MessageEvents cannot be used across threads
Alexey Proskuryakov
Reported
2008-11-05 07:36:00 PST
Patch forthcoming for a couple of issues: 1) MessageEvent bindings should not use static tables, as these events are used in workers. 2) MessagePort shouldn't store MessageEvents in its queue, as Event has an AtomicString member, and AtomicStrings cannot be moved across threads.
Attachments
proposed patch
(6.44 KB, patch)
2008-11-05 07:42 PST
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-11-05 07:42:48 PST
Created
attachment 24908
[details]
proposed patch
Maciej Stachowiak
Comment 2
2008-11-05 07:58:01 PST
Comment on
attachment 24908
[details]
proposed patch r=me
Alexey Proskuryakov
Comment 3
2008-11-05 23:07:49 PST
Committed revision 38151.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug