        Reviewed by Maciej Stachowiak.

https://bugs.webkit.org/show_bug.cgi?id=22083
        MessageEvents cannot be used across threads

        * dom/Event.idl:
        * dom/MessageEvent.idl:
        Add a NoStaticTables attribute - MessageEvent is used in worker threads, so static tables
        won't work.

        * dom/MessagePort.cpp:
        (WebCore::MessagePort::EventData::EventData):
        (WebCore::MessagePort::EventData::~EventData):
        (WebCore::MessagePort::clone):
        (WebCore::MessagePort::postMessage):
        (WebCore::MessagePort::startConversation):
        (WebCore::MessagePort::dispatchMessages):
        * dom/MessagePort.h:
        Don't create a MessageEvent until dispatch time - messages can be posted across threads,
        but MessageEvents are tied to the thread that they were created in.



Canonical link: https://commits.webkit.org/30369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38151 268f45cc-cd09-0410-ab3c-d52691b4dbfc