WebCore/dom/MessagePort.cpp
@@ -62,6 +62,22 @@ private:
     RefPtr<MessagePort> m_port;
 };
 
+MessagePort::EventData::EventData()
+{
+}
+
+MessagePort::EventData::EventData(const String& message, PassRefPtr<DOMWindow> window, PassRefPtr<MessagePort> messagePort)
+    : message(message.copy())
+    , window(window)
+    , messagePort(messagePort)
+{
+    ASSERT(!this->window || isMainThread());
+}
+
+MessagePort::EventData::~EventData()
+{
+}
+
 MessagePort::MessagePort(ScriptExecutionContext* scriptExecutionContext)
     : m_entangledPort(0)
     , m_queueIsOpen(false)
@@ -93,9 +109,9 @@ PassRefPtr<MessagePort> MessagePort::clone(ScriptExecutionContext* newOwner, Exc
 
     // Move all the events in the port message queue of original port to the port message queue of new port, if any, leaving the new port's port message queue in its initial closed state.
     // If events are posted (e.g. from a worker thread) while this code is executing, there is no guarantee whether they end up in the original or new port's message queue.
-    RefPtr<Event> event;
-    while (m_messageQueue.tryGetMessage(event))
-        newPort->m_messageQueue.append(event);
+    EventData eventData;
+    while (m_messageQueue.tryGetMessage(eventData))
+        newPort->m_messageQueue.append(eventData);
 
     entangle(remotePort.get(), newPort.get()); // The port object will be unentangled.
     return newPort;
@@ -124,7 +140,7 @@ void MessagePort::postMessage(const String& message, MessagePort* dataPort, Exce
 
     DOMWindow* window = (m_scriptExecutionContext->isDocument() && m_entangledPort->m_scriptExecutionContext->isDocument()) ?
         static_cast<Document*>(m_scriptExecutionContext)->domWindow() : 0;
-    m_entangledPort->m_messageQueue.append(MessageEvent::create(message, "", "", window, newMessagePort.get()));
+    m_entangledPort->m_messageQueue.append(EventData(message, window, newMessagePort));
     if (m_entangledPort->m_queueIsOpen)
         m_entangledPort->m_scriptExecutionContext->processMessagePortMessagesSoon();
 }
@@ -140,7 +156,7 @@ PassRefPtr<MessagePort> MessagePort::startConversation(ScriptExecutionContext* s
 
     DOMWindow* window = (m_scriptExecutionContext->isDocument() && m_entangledPort->m_scriptExecutionContext->isDocument()) ?
         static_cast<Document*>(m_scriptExecutionContext)->domWindow() : 0;
-    m_entangledPort->m_messageQueue.append(MessageEvent::create(message, "", "", window, port2.get()));
+    m_entangledPort->m_messageQueue.append(EventData(message, window, port2));
     if (m_entangledPort->m_queueIsOpen)
         m_entangledPort->m_scriptExecutionContext->processMessagePortMessagesSoon();
     return port1;
@@ -207,10 +223,12 @@ void MessagePort::dispatchMessages()
     // Messages for contexts that are not fully active get dispatched too, but JSAbstractEventListener::handleEvent() doesn't call handlers for these.
     ASSERT(queueIsOpen());
 
-    RefPtr<Event> evt;
-    while (m_messageQueue.tryGetMessage(evt)) {
+    EventData eventData;
+    while (m_messageQueue.tryGetMessage(eventData)) {
+        ASSERT(!eventData.window || isMainThread());
+        ASSERT(!eventData.window || scriptExecutionContext()->isDocument());
 
-        ASSERT(evt->type() == eventNames().messageEvent);
+        RefPtr<Event> evt = MessageEvent::create(eventData.message, "", "", eventData.window, eventData.messagePort);
 
         if (m_onMessageListener) {
             evt->setTarget(this);
